# fexception

./: .gitignore  README.md  setup.cfg  setup.py
src/fexception/: __init__.py  common.py  fexception.py  formatter.py  util.py
tests/: nested.py  test_fexceptions.py  test_util.py
