[metadata]
name = fexception
description = fexception is designed to provide cleaner useable exceptions.
author = IncognitoCoding
license = MIT
long_description = file: README.rst
long_description_content_type = text/x-rst
url = https://github.com/IncognitoCoding/fexception
classifiers =
    Development Status :: 4 - Beta
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: POSIX :: Linux
    Operating System :: Microsoft :: Windows

[options]
zip_safe = False
packages = find_namespace:
include_package_data = True
package_dir =
    =src

[options.packages.find]
where = src
exclude =
    tests

[bdist_wheel]
universal = 1